--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,7 @@
-pandas numpy scikit-learn matplotlib seaborn openpyxl streamlit
+pandas
+numpy
+scikit-learn
+matplotlib
+seaborn
+openpyxl
+streamlit
